# TASEP

./: ._line.ipynb  .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  W_line.ipynb  Z_line.ipynb  Z_test.ipynb  Z_utils.py  binding.cpp  binding_cooperative_tasep.cpp  cmake_install.cmake  compile.sh  cooperative_tasep.cpp  cooperative_tasep.h  cyclic.cpp  cyclic.ipynb  example.ipynb  line.cpp  line.ipynb  log_plots_between_kon.ipynb  main.cpp  new.ipynb  new_line.ipynb  old_cmake.txt  plot.ipynb  plot_mean_var.ipynb  profiling.ipynb  pyproject.toml  requirments.txt  setup.py  sim.py  simulation.cpp  test.ipynb  transition.ipynb  utils.py
ARCHIVE/: NoExclusion.ipynb  add_grid_factor.ipynb  gillespie.ipynb  manipulate_grid_factor.ipynb  new_gillespie.ipynb  withExclusion.ipynb
MEAN_VAR/: 10  11  12  13  14  15  16  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  34  35  36  37  38  39  4  40  41  42  43  44  45  46  47  48  (+20 more)
TESTS/: options_tests.py
_skbuild/linux-x86_64-3.12/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake  install_manifest.txt
cooperative_tasep_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ideas/: a.out  pool_allocation.cpp  self_allocation.cpp
include/: abstract.hpp  bucket_ref.h  bucket_ref.hpp  cooperative_tasep.h  count_kins.h  debug_utils.h  derived.hpp  memory_pool.hpp  neighbors.h  new.h  rng.hpp  timer.hpp  utils.hpp
lib/: Co_noExclusion.py  Co_withExclusion.py  analytical.py  convert.py  noExclusion.py  parameters.py  paths.py  plotter.py  reader.py  simulation.py  utils.py  withExclusion.py
pysrc/: engine.py  utils.py
pysrc/notebooks/: __init__.py  test.ipynb
python/: neighbors.cpp  plots.py  profile.cpp  utils.py
src/: Bindings.cpp  abstract.cpp  basic.cpp  basic_iteration.cpp  basiciterations.cpp  binding_cooperative_tasep.cpp  bullshit.txt  cooperative_tasep.cpp  count_kins.cpp  full.cpp  kins_only.cpp  neighbors.cpp  new.cpp  new_count_kins.cpp  nneighbors.cpp  phase.cpp  profile.cpp
src/tasep.egg-info/: PKG-INFO  SOURCES.txt
tasep.egg-info/: PKG-INFO  SOURCES.txt
tests/: example.ipynb  res.csv
